Repeating header groups should align properly when captions are present

BUG=652792
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://chromiumcodereview.appspot.com/2422953003
Cr-Commit-Position: refs/heads/master@{#426243}

Former-commit-id: 42151f9c0132a60a7be3b1793295a1966f532ca6